getting up and running

--- a/assets/css/_globals.pcss
+++ b/assets/css/_globals.pcss
@@ -9,5 +9,6 @@ html {
 body {
   background-color: var(--bg);
   color: var(--text);
-  @apply transition-colors duration-200 ease-in-out;
+  @apply transition-colors duration-200 ease-in-out border-solid border-accent;
+  border-top-width: 1.5rem;
 }
