--- a/assets/css/_vars.pcss
+++ b/assets/css/_vars.pcss
@@ -64,6 +64,9 @@
 
   --border-color: var(--color-primary-700); /* used to be #0d2538; */
   --border-color-secondary: var(--color-primary-600); /* used to be #2d4253; */
+
+  --font-family-headings: 'Rubik', sans-serif;
+  --font-family-body: 'Karla', sans-serif;
 }
 
 .light-mode {
@@ -92,7 +95,7 @@
   --text: var(--color-primary-900); /* used to be #158876; #35495e; #243746; */
   --text-secondary: var(--color-primary-800); /* used to be #0e2233; #526488 */
 
-  --bg: var(--color-primary-100); /* used to be #f3f5f4; */
+  --bg: wbite; /* used to be #f3f5f4; */
   --bg-secondary: var(--color-primary-200); /* used to be #fff; */
 
   --border-color: var(--color-primary-400); /* used to be #ddd; */
