--- a/assets/css/_grid.pcss
+++ b/assets/css/_grid.pcss
@@ -1,11 +1,5 @@
 .container {
-  min-height: 100vh;
-  padding-top: 56px; /* header height */
-  @apply my-0 mx-auto flex justify-center items-start text-center flex-col;
-}
-
-.main {
-  @apply w-full max-w-5xl mx-auto px-8 py-2 flex-auto;
+  @apply my-0 mx-auto max-w-5xl;
 }
 
 .articles {
